objects/CaseOutCome__c.object
<CustomObject>
    <fields>
        <fullName>CaseSubject__c</fullName>
        <description>Field to match against Case subject</description>
        <label>CaseSubject</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OutComeId__c</fullName>
        <externalId>true</externalId>
        <label>OutComeId</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutCome__c</fullName>
        <externalId>true</externalId>
        <label>OutCome</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CaseOutCome</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OutCome__c</columns>
        <columns>OutComeId__c</columns>
        <columns>CaseSubject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COC-{000}</displayFormat>
        <label>CaseOutCome Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseOutComes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>